chore: added RegionFileRelocator#noChunkNBTscan method