@@ -42,6 +42,7 @@ public class RegionFileRelocator {
     @Nullable
     private final UUID playerId;
     private boolean started = false;
+    private boolean chunkNBTscan = true;
 
     public static RegionFileRelocator create(CommandSourceStack source, String templateId, ResourceKey<Level> dimensionKey, RelocatorTracker.Ticker ticker, XZ regionOffset, boolean force) throws IOException {
         return RelocatorTracker.INSTANCE.add(new RegionFileRelocator(source, templateId, dimensionKey, regionOffset, force), ticker);
@@ -93,13 +94,24 @@ public class RegionFileRelocator {
         return relocationData;
     }
 
+    /**
+     * Disable chunk NBT scanning for much faster relocation; <strong>only do this if you know for certain that there
+     * are no block entities which store absolute block positions!</strong>
+     *
+     * @return the relocator itself
+     */
+    public RegionFileRelocator noChunkNBTscan() {
+        chunkNBTscan = false;
+        return this;
+    }
+
     public void start(BooleanConsumer onCompleted) {
         if (started) {
             throw new IllegalStateException("relocator already started!");
         }
 
         // called from main thread
-        Path workDir = destDir.resolve("worktmp-" + Thread.currentThread().getId());
+        Path workDir = destDir.resolve("worktmp-" + Thread.currentThread().threadId());
         try {
             if (!force) {
                 // ensure none of the dest region MCA files exist yet
@@ -182,7 +194,7 @@ public class RegionFileRelocator {
     }
 
     private boolean updateRegionChunkData(RegionFileStorage storage, RegionCoords r, int xOff, int zOff) {
-        if (xOff == 0 && zOff == 0) {
+        if (!chunkNBTscan || xOff == 0 && zOff == 0) {
             return true; // trivial case
         }
 
